--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -26,6 +26,11 @@
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
+                <artifactId>webjars-locator-jboss-vfs</artifactId>
+                <version>0.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.webjars</groupId>
                 <artifactId>bootstrap</artifactId>
                 <version>${version.org.webjars.bootstrap}</version>
             </dependency>
