--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <version.org.webjars.webjars-locator>0.30</version.org.webjars.webjars-locator>
         <version.org.webjars.bootstrap>4.1.0</version.org.webjars.bootstrap>
+        <version.org.webjars.webjars-locator-jboss-vfs>0.1.0</version.org.webjars.webjars-locator-jboss-vfs>
     </properties>
 
     <dependencyManagement>
@@ -27,7 +28,7 @@
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>webjars-locator-jboss-vfs</artifactId>
-                <version>0.1.0</version>
+                <version>${version.org.webjars.webjars-locator-jboss-vfs}</version>
             </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
