Use published webfilter-resolver (and not a Snapshot version)

--- a/java-ee-7-with-webfilter-resolver/pom.xml
+++ b/java-ee-7-with-webfilter-resolver/pom.xml
@@ -45,9 +45,9 @@
     <dependencies>
         <!-- Webjars Stuff -->
         <dependency>
-            <groupId>net.olada.webjars</groupId>
+            <groupId>com.github.olada</groupId>
             <artifactId>webjars-webfilter-resolver</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
